--- a/timer.html
+++ b/timer.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 </head>
-<body>
+<body bgcolor="blue">
 	<table>
 		<tr>
 			<td><input type="text" name="hr" id="hr " placeholder="Hour">:
